# llm

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: config.yml
src/: llm.py
